# toy_blockchain

./: .gitignore  Cargo.toml  README.md  run.sh  test.sh
src/: block.rs  blockchain.rs  main.rs  tests.rs  transaction.rs  utils.rs  utxo_set.rs  wallet.rs
