[package]
name = "toy_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"    # encode, decode
ring = "0.16.20"  # sha256
bincode = "1.3.3" # serialize, deserialize
num-bigint = "0.4.0" # bigint, It supports big integers
data-encoding = "2.3.0" # HEXLOWER
sled = "0.34.0"  # key-value store
serde = { version = "1.0.132", features = ["derive"] }
